Bug 820676: Remove unreachable basic blocks from the control flow graph in IonMonkey. r=jandem